# mbot

./: .gitignore  AUTHORS  ChangeLog  FAQ  INSTALL  INSTALL.win32  Makefile.in  NEWS  README  README.md  configure  configure.in
config/: gcc_stack_protect.m4  tcl.m4
example/: example.bot.conf  example.conf  example.get  example.motd  example.seen  example.shell.conf  example.users  example.words
inc/: Bot.h  Channel.h  List.h  ListUsers.h  ListVars.h  Log.h  Module.h  Net.h  NetDCC.h  NetServer.h  Script.h  Services.h  Strings.h  Text.h  config.h  config.h.in  defines.h  mbot.h  missing.h  scriptcmd.h  system.h  utils.h
mod/: Makefile  Makefile.in  alice.cpp  calc.cpp  chanstat.cpp  extra.cpp  flood.cpp  getnick.cpp  invite.cpp  ircop.cpp  joinmsg.cpp  log.cpp  seen.cpp  shell.cpp  tcl.cpp  urlsniffer.cpp  watch.cpp  web.cpp  whois.cpp  word.cpp
scripts/: hal-google-0.3a.tcl  hal-syntax.tcl  imdb.tcl
src/: Bot.cpp  Channel.cpp  List.cpp  ListUsers.cpp  ListVars.cpp  Log.cpp  Makefile.in  Module.cpp  Net.cpp  NetDCC.cpp  NetServer.cpp  Script.cpp  Services.cpp  Strings.cpp  Text.cpp  mbot.cpp  missing.cpp  scriptcmd.cpp  utils.cpp
vc/: alice.dsp  calc.dsp  chanstat.dsp  extra.dsp  flood.dsp  invite.dsp  ircop.dsp  joinmsg.dsp  log.dsp  mbot.dsp  mbot.dsw  seen.dsp  watch.dsp  whois.dsp  word.dsp
